# chain

./: .gitignore  CInt_t0.c  CInt_t0.chain  CInt_t0.ok  CInt_t0.spl  CInt_t0test.c  CInt_test.c  CInterpreter.c  CInterpreter.h  CMakeLists.txt  README.md  atomic.c  atomic.h  functions.c  functions.h  go.c  go.h  iterators.c  iterators.h  lib.h  main.c  pool.c  pool.h  t0.c  t1.c  t2.c  t3.c  t4.c  t5.c  t6.c  t7.c  value.c  value.h  worker.c  worker.h
demos/: alternate.spl  fib.spl  giant.spl  loop.spl
