cmake_minimum_required(VERSION 3.10.2)
project(compiler)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -O0")
set_property(SOURCE magic.s PROPERTY LANGUAGE C)
add_executable(compiler CInterpreter.c go.c go.h main.c value.h functions.h atomic.h)
add_executable(t0 t0.c value.h value.c functions.c functions.h pool.c pool.h iterators.c iterators.h)
add_executable(t1 t1.c value.h value.c functions.c functions.h pool.c pool.h iterators.c iterators.h)
add_executable(t2 t2.c value.h value.c functions.c functions.h pool.c pool.h iterators.c iterators.h atomic.h atomic.c)
add_executable(t3 t3.c value.h value.c functions.c functions.h pool.c pool.h iterators.c iterators.h atomic.h atomic.c)
add_executable(t4 t4.c value.h value.c functions.c functions.h pool.c pool.h iterators.c iterators.h atomic.h atomic.c)
add_executable(CInt_t0 CInt_t0.c CInterpreter.c CInterpreter.h)
